Moved SubscriptionFilter logic to Filters class
