# xyz-models/src/main/java/com/here/xyz/filters/Filters.java
@@ -16,7 +16,7 @@
  * License-Filename: LICENSE
  */
 
-package com.here.xyz.jobs.datasets.filters;
+package com.here.xyz.filters;
 
 import static com.here.xyz.XyzSerializable.serialize;
 import static com.here.xyz.events.ContextAwareEvent.SpaceContext.DEFAULT;
@@ -48,6 +48,9 @@ public class Filters {
 
   @JsonView({Public.class, Static.class})
   private SpaceContext context = DEFAULT;
+
+  @JsonView({Public.class, Static.class})
+  private String jsonPath;
 
   public PropertiesQuery getPropertyFilter() {
     return propertyFilter;
@@ -100,6 +103,19 @@ public class Filters {
 
   public Filters withContext(SpaceContext context) {
     setContext(context);
+    return this;
+  }
+
+  public String getJsonPath() {
+    return jsonPath;
+  }
+
+  public void setJsonPath(String jsonPath) {
+    this.jsonPath = jsonPath;
+  }
+
+  public Filters withJsonPath(String jsonPath) {
+    setJsonPath(jsonPath);
     return this;
   }
 
